<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message" translatable="true">Hello World!</string>
    <string name="buttonText" translatable="true">I\'m a button</string>
    <string name="widgetText" translatable="true">Here are my widgets:</string>
    <string name="checkText" translatable="true">Check this out!</string>
    <string name="editHint" translatable="true">Type your answer here</string>
    <string name="switchText" translatable="true">Switch on/off</string>
    <string name="l3text1">Enter your email address</string>
    <string name="l3text2">Enter your password</string>
    <string name="l3edit1">Type email here</string>
    <string name="l3edit2">Type name here</string>
    <string name="loginT">LOGIN</string>
    <string name="yourProfile"> Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="yourEmail">Your email:</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickText">Click the button above to take picture</string>
    <string name="chatText">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="chatHint">Type here</string>
    <string name="layoutText">Go to layout</string>
    <string name="menuChoice1">Choice 1</string>
    <string name="menuChoice2">Choice 2</string>
    <string name="menuChoice3">Choice 3</string>
    <string name="menuChoice4">Choice 4</string>
    <string name="positive">Enter</string>
    <string name="negative">Cancel</string>
    <string name="menuMessage">What is your new message?</string>
    <string name="snackBarText">Go Back?</string>
    <string name="weatherText">Go to forecast</string>

</resources>
