<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:columnCount="2"
    android:gravity="fill"
    android:rowCount="4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:gravity="fill"

        android:text="@string/widgetText"
        android:textSize="30sp" />

    <Button
        android:id="@+id/aButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/buttonText" />

    <ImageButton
        android:id="@+id/canadianButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:src="@drawable/flag" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:text="@string/checkText" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="fill"
        android:layout_columnWeight="1"
        android:text="@string/switchText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/editHint"
        android:inputType="textPersonName" />

</GridLayout>